# SPDX-FileCopyrightText: tuberry
# SPDX-License-Identifier: GPL-3.0-or-later

option('target', type: 'combo', choices: ['zip', 'local', 'system'], value: 'local', description: 'build target')
option('version', type: 'boolean', value: true, description: 'sync with the E.G.O version or not (for local target)')
option('desktop', type: 'boolean', value: false, description: 'save to user Desktop or not (for zip target)')
